samples/_failures_safe/1761659921_5f06c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e14c6204.c: In function ‘main’:
./samples/SAFE/__tmp_e14c6204.c:161:33: error: expected ‘)’ at end of input
  161 |         if (scanf("%d %d %d", &u
      |                  ~              ^
      |                                 )
./samples/SAFE/__tmp_e14c6204.c:161:9: error: expected declaration or statement at end of input
  161 |         if (scanf("%d %d %d", &u
      |         ^~
./samples/SAFE/__tmp_e14c6204.c:161:9: error: expected declaration or statement at end of input
